--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-color": "^2.18.0",
     "react-date-picker": "^7.10.0",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
